checked all feedback tutorials

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "In this example, we will demonstrate how to use different LLM tools, like `openai`, `transformers`, `langchain` and `outlines`, to create synthetic data and we can leverage those same LLMs for providing initial annotation or suggestions.\n",
         "\n",
-        "If you want a more basic introduction to synthetic data with our `ArgillaCallbackHandler` for `langchain`, you can take a look at [this practical guide](/practical_guides/use_argilla_callback_in_langchain.md).\n",
+        "If you want a more basic introduction to synthetic data with our `ArgillaCallbackHandler` for `langchain`, you can take a look at [this practical guide](../../../tutorials_and_integrations/integrations/use_argilla_callback_in_langchain.md).\n",
         "\n",
         "<div class=\"alert alert-info\">\n",
         "\n",
@@ -43,9 +43,9 @@
       "source": [
         "## Setup\n",
         "\n",
-        "For this tutorial, you will need to have an Argilla server running. If you don't have one already, check out our [Quickstart](../../../getting_started/quickstart.md) or [Installation](../../../getting_started/installation/installation.md) pages. Once you do, complete the following steps:\n",
+        "For this tutorial, you will need to have an Argilla server running. If you don't have one already, check out our [Quickstart](../../../getting_started/quickstart.md) or [Installation](../../../getting_started/quickstart_installation.ipynb) pages. Once you do, complete the following steps:\n",
         "\n",
-        "1. Install the Argilla client and the required third party libraries using `pip`:"
+        "1. Install the Argilla client and the required third-party libraries using `pip`:"
       ]
     },
     {
@@ -178,7 +178,7 @@
       "source": [
         "We will use LLMs to generate the synthetic data for each step of the NLP task. First, we will create `text` requests from customers for a bank. Next, we will create input for the `LabelQuestion` to assess the sentiment of the requests and lastly, we will create input for the `MultiLabelQuestion` to classify the requests.\n",
         "\n",
-        "We will do this using [OpenAI](https://github.com/openai/openai-python) models in combination with the [LangChain](https://github.com/langchain-ai/langchain) and open-source transformer based models in combination with [Outlines](https://github.com/normal-computing/outlines) packages.\n",
+        "We will do this using [OpenAI](https://github.com/openai/openai-python) models in combination with the [LangChain](https://github.com/langchain-ai/langchain) and open-source transformer-based models in combination with [Outlines](https://github.com/normal-computing/outlines) packages.\n",
         "\n",
         " | The LangChain framework is a wrapper around LLM models that allows for easier data-aware and agent-based LLM models. \n",
         "\n",
@@ -219,7 +219,7 @@
       "source": [
         "#### Outlines with Transformers\n",
         "\n",
-        "Even though outlines does provide some support for OpenAI, we will use basic transformers for this example. You can use any generative model from the [HuggingFace model hub](https://huggingface.co/models?pipeline_tag=text-generation&sort=trending) by passing the name of the model to the `transformers` function. The `model` variable is then ready to use in the examples below."
+        "Even though Outlines does provide some support for OpenAI, we will use basic transformers for this example. You can use any generative model from the [HuggingFace model hub](https://huggingface.co/models?pipeline_tag=text-generation&sort=trending) by passing the name of the model to the `transformers` function. The `model` variable is then ready to use in the examples below."
       ]
     },
     {
@@ -237,7 +237,7 @@
       "source": [
         "### `TextField`\n",
         "\n",
-        "For creating a review, we rely on free text generation based on a prompt. This should be good enough for our purposes of creating a synthetic dataset. And keeps the process a simple as possible."
+        "For creating a review, we rely on free text generation based on a prompt. This should be good enough for our purposes of creating a synthetic dataset as well as keeping the process as simple as possible."
       ]
     },
     {
@@ -246,7 +246,7 @@
       "source": [
         "#### LangChain\n",
         "\n",
-        "OpenAI models have been instruction tuned and can thus be used via LangChain to generate synthetic data. This is done using a `PrompTemplate` that infers information from `topic` and `sentiment` variables that are passed to the `predict()` method."
+        "OpenAI models have been instruction-tuned and can thus be used via LangChain to generate synthetic data. This is done using a `PrompTemplate` that infers information from `topic` and `sentiment` variables that are passed to the `predict()` method."
       ]
     },
     {
@@ -405,7 +405,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For this step, we will re-use the generated reviews from `langchain_reviews` and `outlines_reviews` and label their sentiment using the respective frameworks. This will be done by assuming a `str` to be returned from both the list of `sentiment` defined above."
+        "For this step, we will re-use the generated reviews from `langchain_reviews` and `outlines_reviews` and label their sentiment using the respective frameworks. This will be done by assuming a `str` to be returned from both of the lists of `sentiment` defined above."
       ]
     },
     {
@@ -414,7 +414,7 @@
       "source": [
         "#### LangChain\n",
         "\n",
-        "We are using a jinja-like `template`, which requires us to define basic `prompt` as an `input_variable` for LangChain. For the initial example, we are using a demo."
+        "We are using a jinja-like `template`, which requires us to define the basic `prompt` as an `input_variable` for LangChain. For the initial example, we are using a demo."
       ]
     },
     {
@@ -482,7 +482,7 @@
       "source": [
         "#### Outlines\n",
         "\n",
-        "Outlines provide an out-of-the-box implementation for guided labeling with generative, however, in some cases [(zero-shot) classification models from the HuggingFace library](https://huggingface.co/models?pipeline_tag=text-classification&sort=trending) can be used to provide a good point for the providing suggestions during a labeling process too. Take a look at our [example with SetFit](https://docs.argilla.io/en/latest/guides/llms/examples/labelling-feedback-setfit.html)."
+        "Outlines provide an out-of-the-box implementation for guided labeling with generative, however, in some cases [(zero-shot) classification models from the HuggingFace library](https://huggingface.co/models?pipeline_tag=text-classification&sort=trending) can be used to provide a good point for the providing suggestions during a labeling process too. Take a look at our [example with SetFit](labelling-feedback-setfit.ipynb)."
       ]
     },
     {
@@ -542,7 +542,7 @@
       "source": [
         "### `MultiLabelQuestion`\n",
         "\n",
-        "For this step, we will re-use the generated reviews from `lanchain_reviews` and `outlines_reviews` and label their topics as part of a multi-label classificaiton problem."
+        "For this step, we will re-use the generated reviews from `lanchain_reviews` and `outlines_reviews` and label their topics as part of a multi-label classification problem."
       ]
     },
     {
@@ -551,7 +551,7 @@
       "source": [
         "#### Langchain\n",
         "\n",
-        "Not that we are now using an output parser as post-processing step for the returned output. We do this to ensure that we can obtain a `List[str]`. We will use the builtin `CommaSeparatedListOutputParser`, which split strings by comma and returns a list of strings as output. And we are using the jinja-like templating in a similar way as with the `SingleLabelQuestion`."
+        "Note that we are now using an output parser as a post-processing step for the returned output. We do this to ensure that we can obtain a `List[str]`. We will use the built-in `CommaSeparatedListOutputParser`, which split strings by comma and returns a list of strings as output. And we are using the jinja-like templating in a similar way as with the `SingleLabelQuestion`."
       ]
     },
     {
@@ -657,7 +657,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we have our synthetic data and prediction, we can use them to create Argilla records. We will create completely artificial records from the `text` for the `TextField` and we will assign the `sentiment` and `topics` as model suggestions for the `LabelQuestion` and `MultiLabelQuestion`, respectively. These suggestions will help the annotators to label the data faster and more accurately, but instead of using them as suggestions, you would also be able to apply them as [annotated responses](/practical_guides/create_dataset.html#add-responses) directly."
+        "Now we have our synthetic data and predictions, we can use them to create Argilla records. We will create completely artificial records from the `text` for the `TextField` and we will assign the `sentiment` and `topics` as model suggestions for the `LabelQuestion` and `MultiLabelQuestion`, respectively. These suggestions will help the annotators to label the data faster and more accurately, but instead of using them as suggestions, you would also be able to apply them as [annotated responses](../../../practical_guides/create_dataset.md#add-responses) directly."
       ]
     },
     {
