--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
@@ -38,9 +38,9 @@
       "source": [
         "## Setup\n",
         "\n",
-        "For this tutorial, you will need to have an Argilla server running. If you don't have one already, check out our [Quickstart](../../../getting_started/quickstart.md) or [Installation](../../../getting_started/installation/installation.md) pages. Once you do, complete the following steps:\n",
+        "For this tutorial, you will need to have an Argilla server running. If you don't have one already, check out our [Quickstart](../../../getting_started/quickstart.md) or [Installation](../../../getting_started/quickstart_installation.ipynb) pages. Once you do, complete the following steps:\n",
         "\n",
-        "1. Install the Argilla client and the required third party libraries using `pip`:"
+        "1. Install the Argilla client and the required third-party libraries using `pip`:"
       ]
     },
     {
@@ -371,7 +371,7 @@
         "id": "-OMxM53bMBYZ"
       },
       "source": [
-        "For reward modelling, we would like to ask labelers to rank two responses for a prompt from best to worst. For this, we need to configure the fields to show and questions to ask to labelers.\n",
+        "For reward modeling, we would like to ask labelers to rank two responses for a prompt from best to worst. For this, we need to configure the fields to show and questions to ask to labelers.\n",
         "\n",
         "The dataset will show the users three fields `instruction`, which corresponds to the prompt, `response-1` and `response-2`, which correspond to each of the responses to the instruction.\n"
       ]
@@ -430,9 +430,9 @@
       "source": [
         "## Create records\n",
         "\n",
-        "The next step is build the records for collecting comparison data. This step typically involves generating responses using one or several instruction-tuned model. \n",
+        "The next step is to build the records for collecting comparison data. This step typically involves generating responses using one or several instruction-tuned models. \n",
         "\n",
-        ".. tip:: When showing responses from two different models to labelers. It's recommended to randomly assign different model responses to `response-1` and `response-2` for each record. Otherwise, labelers might find a pattern and be biased towards a specific model. This is specially relevant for model comparison and evaluation, but also applies to comparison data for reward modelling. \n",
+        ".. tip:: When showing responses from two different models to labelers it's recommended to randomly assign different model responses to `response-1` and `response-2` for each record. Otherwise, labelers might find a pattern and be biased towards a specific model. This is especially relevant for model comparison and evaluation but also applies to comparison data for reward modeling. \n",
         "\n",
         "In this example, we've already generated a dataset using the instructions from the Dolly curated dataset with the Falcon-7B-instruct model. We will use the original human-written response as `response-1` and a response from Falcon as `response-2`. \n",
         "\n",
@@ -474,7 +474,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now the dataset is ready for labelling. This is the Feedback UI we have just configured:\n",
+        "Now the dataset is ready for labeling. This is the Feedback UI we have just configured:\n",
         "\n",
         "\n",
         "<img src=\"/_static/images/llms/reward-model-ui.png\" alt=\"A Feedback Task setting for the reward modeling\" style=\"width: 1100px;\">\n",
@@ -511,11 +511,11 @@
       "source": [
         "## Collect feedback and prepare the dataset\n",
         "\n",
-        "Once the data has been labelled using the Argilla UI, we can retrieve it with the Python SDK and prepare it for training the reward model with TRL.\n",
+        "Once the data has been labeled using the Argilla UI, we can retrieve it with the Python SDK and prepare it for training the reward model with TRL.\n",
         "\n",
-        "If you are running this tutorial but haven´t labelled any data points, execute the following cell to retrieve the labelled dataset from the Hugging Face Hub. This dataset already contains ranked response and can be used for the next steps. The dataset is available in the Hub, feel free to [read the dataset card](https://huggingface.co/datasets/argilla/comparison-data-falcon-with-feedback) to understand its structure, annotation guidelines, responses, and how to import it. \n",
+        "If you are running this tutorial but haven´t labeled any data points, execute the following cell to retrieve the labeled dataset from the Hugging Face Hub. This dataset already contains ranked responses and can be used for the next steps. The dataset is available in the Hub, feel free to [read the dataset card](https://huggingface.co/datasets/argilla/comparison-data-falcon-with-feedback) to understand its structure, annotation guidelines, responses, and how to import it. \n",
         "\n",
-        "If you have labelled some examples jump and execute the second cell. "
+        "If you have labeled some examples jump and execute the second cell. "
       ]
     },
     {
@@ -614,7 +614,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The next step is to prepare the dataset in the standard format for training a reward model. In particular, we want to select the chosen and rejected response from the user feedback. We do this by creating a `TrainingTask` instance for reward modelling using a function that returns chosen-rejected tuples."
+        "The next step is to prepare the dataset in the standard format for training a reward model. In particular, we want to select the chosen and rejected responses from the user feedback. We do this by creating a `TrainingTask` instance for reward modeling using a function that returns chosen-rejected tuples."
       ]
     },
     {
@@ -738,7 +738,7 @@
         "To run this step, you need to rank some examples using the Argilla UI, or run the step above with the load from Hugging Face call: `feedback_dataset = FeedbackDataset.from_huggingface`\n",
         "</div>\n",
         "\n",
-        "To train Reward Model you need to choose a base model to fine-tune. In the literature, the base model is typically the supervised fine-tuned model resulting from the instruction-tuning step. In this example, that would mean using the [Falcon-7B-instruct model](https://huggingface.co/tiiuae/falcon-7b-instruct). However, as Reward Models are essentially classifiers you can use a more light-weight backbone model, for this example we will use `distilroberta-base` but feel free to experiment with other models.\n",
+        "To train a Reward Model, you need to choose a base model to fine-tune. In the literature, the base model is typically the supervised fine-tuned model resulting from the instruction-tuning step. In this example, that would mean using the [Falcon-7B-instruct model](https://huggingface.co/tiiuae/falcon-7b-instruct). However, as Reward Models are essentially classifiers you can use a more lightweight backbone model, for this example we will use `distilroberta-base` but feel free to experiment with other models.\n",
         "\n",
         "The code below fine-tunes a `SequenceClassification` model with our preference dataset. The most interesting part is the `formatting_func` function. This function combines instructions with chosen and rejected responses, creating two new strings. These strings are tokenized, becoming input for a reward model that learns to distinguish between good and bad responses based on these examples. The model will be optimized to assign higher values to preferred responses and lower values to rejected responses.\n"
       ]
@@ -865,7 +865,7 @@
       "source": [
         "## Summary\n",
         "\n",
-        "In this tutorial, we learned how to create an comparison dataset by ranking responses from the Dolly dataset and Falcon. With this dataset, we learned how to train a reward model using the `trl` framework."
+        "In this tutorial, we learned how to create a comparison dataset by ranking responses from the Dolly dataset and Falcon. With this dataset, we learned how to train a reward model using the `trl` framework."
       ]
     },
     {
