--- a/docs/_source/tutorials/notebooks/deploying-text2text-dvc-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/deploying-text2text-dvc-explainability.ipynb
@@ -8,7 +8,7 @@
     "# 🔐 Backup and version Argilla `Datasets` using `DVC`\n",
     "\n",
     "\n",
-    "In this tutorial, we will show you how you can store and version your data using [DVC](https://dvc.org/). Alternatively, you can take a look at our [Elasticsearch docs](../../getting_started/installation/elasticsearch.md) about creating retention snapshots directly from your Elasticsearch cluster. It will walk you through the following steps:\n",
+    "In this tutorial, we will show you how you can store and version your data using [DVC](https://dvc.org/). Alternatively, you can take a look at our [Elasticsearch docs](../../getting_started/installation/configurations/elasticsearch.md) about creating retention snapshots directly from your Elasticsearch cluster. It will walk you through the following steps:\n",
     "\n",
     "- ⚙️ configure DVC\n",
     "- 🧐 determine backup config\n",
@@ -32,11 +32,6 @@
     "\n",
     "Let's get started!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "attachments": {},
@@ -167,7 +162,7 @@
    "source": [
     "## Configure `.git`\n",
     "\n",
-    "We will use GitHub as a way to track our stored files. This requires us to link our directory to a git remote. We assume that the environment already has set-up the correct git [credentials](https://docs.github.com/en/get-started/getting-started-with-git/setting-your-username-in-git) and that it is linked to a `.git` file. This can be tested with `git remote -v`."
+    "We will use GitHub as a way to track our stored files. This requires us to link our directory to a git remote. We assume that the environment already has set up the correct git [credentials](https://docs.github.com/en/get-started/getting-started-with-git/setting-your-username-in-git) and that it is linked to a `.git` file. This can be tested with `git remote -v`."
    ]
   },
   {
@@ -228,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we assume that DVC will be used in combination with Google Drive as remote storage. Other options are available but configuring Google Drive is the most strraightforward approach. This need to be configured by adding something similar as shown below, where `<your-gdrive-folder-id>` is replaced with the Google Drive folder you would like to use for storage. Alternatively, you can go to their [configuration page](https://dvc.org/doc/user-guide/how-to/setup-google-drive-remote)."
+    "Next, we assume that DVC will be used in combination with Google Drive as remote storage. Other options are available but configuring Google Drive is the most straightforward approach. This needs to be configured by adding something similar as shown below, where `<your-gdrive-folder-id>` is replaced with the Google Drive folder you would like to use for storage. Alternatively, you can go to their [configuration page](https://dvc.org/doc/user-guide/how-to/setup-google-drive-remote)."
    ]
   },
   {
@@ -281,7 +276,7 @@
    "source": [
     "## Define Background Process\n",
     "\n",
-    "After setting up DVC, we can now define function to collect and store data. This will follow the following steps:\n",
+    "After setting up DVC, we can now define a function to collect and store data. This will follow the following steps:\n",
     "-   Export data using a naming convention `/data/YY-mm-dd_dataset`\n",
     "    -   (optional) create `/data_descriptions` to add to GitHub\n",
     "-   Add the data to DVC, creating a `.dvc` reference to the `/data/*`\n",
@@ -369,7 +364,7 @@
    "metadata": {},
    "source": [
     "This is just a toy example but it is highly configurable depending on your needs. \n",
-    "Think about, \n",
+    "Think about: \n",
     "- only backing up records that are more than X days old\n",
     "- deleting records after backing them up\n",
     "- separating backups per time period \n",
