--- a/docs/_source/tutorials/notebooks/deploying-textclassification-colab-activelearning.ipynb
+++ b/docs/_source/tutorials/notebooks/deploying-textclassification-colab-activelearning.ipynb
@@ -88,7 +88,7 @@
     "id": "_u7gFMiTBYTs"
    },
    "source": [
-    "Elastic Search is a requirement for using Argilla. The [docker installation](https://docs.argilla.io/en/latest/getting_started/quickstart.html) of Elastic Search recommended by Argilla does not work in Google Colab as [Colab does not support docker](https://github.com/googlecolab/colabtools/issues/299). Elastic Search therefore needs to be installed 'manually' with the follwing code."
+    "Elastic Search is a requirement for using Argilla. The [docker installation](https://docs.argilla.io/en/latest/getting_started/quickstart.html) of Elastic Search recommended by Argilla does not work in Google Colab as [Colab does not support docker](https://github.com/googlecolab/colabtools/issues/299). Elastic Search therefore needs to be installed 'manually' with the following code."
    ]
   },
   {
@@ -145,7 +145,7 @@
     "id": "axtfY-QyLnCW"
    },
    "source": [
-    "You now need to start Argilla localhost in separate terminal. We cannot just run `!argilla server start` in a code cell on Colab, because the cell will run indefinitely and block us from running other cells. We therefore need to open a separate terminal to run Argilla.\n",
+    "You now need to start Argilla localhost in a separate terminal. We cannot just run `!argilla server start` in a code cell on Colab, because the cell will run indefinitely and block us from running other cells. We therefore need to open a separate terminal to run Argilla.\n",
     "\n",
     "1. Option with Colab Pro: Open the Colab Pro terminal (button to the bottom left) and type in the terminal: `argilla server start`\n",
     "2. Option without Colab Pro: Run the following code cell to get a free terminal window in the code cell with [xterm](https://github.com/InfuseAI/colab-xterm). Then type `argilla server start` in the terminal window"
@@ -198,7 +198,7 @@
     "id": "xHPwq1q9ffDN"
    },
    "source": [
-    "We now have some virtual machine from Google running an Argilla localhost, but we cannot access it yet. [ngrok](https://ngrok.com/) is a service designed to create public links to a localhost. We can therefore use ngrok to create a public link to access the Argilla localhost running on the Google machine. Note that anyone with this (temporary) public link can access the (temporary) localhost. In order to use ngrok, you need to create a free account. Creating a free account only takes a minute following the [instructions here](https://ngrok.com/). With the free account you receive an access token. Once you have your access token, you can run the following cell and copy the token into the input prompt. "
+    "We now have some virtual machine from Google running an Argilla localhost, but we cannot access it yet. [ngrok](https://ngrok.com/) is a service designed to create public links to a localhost. We can therefore use ngrok to create a public link to access the Argilla localhost running on the Google machine. Note that anyone with this (temporary) public link can access the (temporary) localhost. In order to use ngrok, you need to create a free account. Creating a free account only takes a minute following the [instructions here](https://ngrok.com/). With the free account, you receive an access token. Once you have your access token, you can run the following cell and copy the token into the input prompt. "
    ]
   },
   {
@@ -238,7 +238,7 @@
     "print(\"You can now access the Argilla localhost with the public link below. (It should look something like 'http://X03b-34-XXX-237-25.ngrok.io')\\n\")\n",
     "print(f\"Your ngrok public link: {ngrok_tunnel}\\n\")\n",
     "print(\"After clicking on the link, there will be a warning, which you can ignore\")\n",
-    "print(\"You can then login with the default agrilla username 'argilla' and password '1234'\")"
+    "print(\"You can then login with the default argilla username 'argilla' and password '1234'\")"
    ]
   },
   {
@@ -258,7 +258,7 @@
     "id": "EObyEHqxhes8"
    },
    "source": [
-    "If you click on your public link above, you should be able to access Argilla, but there is no data logged to Argilla yet. The following code downloads an example dataset and logs it to Argilla. You can change the following code to download any other dataset you want to annotate. The following code follows the [active learning with small-text](https://docs.argilla.io/en/latest/tutorials/notebooks/training-textclassification-smalltext-activelearning.html) tutorial and therefore contains less explanations. "
+    "If you click on your public link above, you should be able to access Argilla, but there is no data logged to Argilla yet. The following code downloads an example dataset and logs it to Argilla. You can change the following code to download any other dataset you want to annotate. The following code follows the [active learning with small-text](https://docs.argilla.io/en/latest/tutorials/notebooks/training-textclassification-smalltext-activelearning.html) tutorial and therefore contains fewer explanations. "
    ]
   },
   {
@@ -541,7 +541,7 @@
     }
    ],
    "source": [
-    "print(f\"You can now start annotating with an active learning in the background!\")\n",
+    "print(f\"You can now start annotating with active learning in the background!\")\n",
     "print(f\"The public link for accessing the annotation interface is: {ngrok_tunnel}\")\n"
    ]
   },
@@ -554,7 +554,7 @@
    "source": [
     "After each iteration of 10 new annotated texts, the active learner will be re-trained and recommend a new batch of 10 texts. So you need to manually annotate exactly 10 texts to get new texts.\n",
     "\n",
-    "⚠️ Note that it will take a while until the active learner has been re-trained and analysed all remaining data to recommend new data. This probably takes several minutes. Refresh the Argilla window after a few minutes and a new batch of 10 texts should automatically appear in the interface. If it does not work immediately, double check if you really annotated all 10 new texts and wait a bit longer.  ⚠️"
+    "⚠️ Note that it will take a while until the active learner has been re-trained and analyed all remaining data to recommend new data. This probably takes several minutes. Refresh the Argilla window after a few minutes and a new batch of 10 texts should automatically appear in the interface. If it does not work immediately, double-check if you really annotated all 10 new texts and wait a bit longer.  ⚠️"
    ]
   },
   {
