--- a/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "[spacy-llm](https://spacy.io/usage/large-language-models) is a package that integrates the strength of LLMs into regular spaCy pipelines, thus allowing to quick and practical prompting for various tasks. Besides, since it requires no training data, the models are ready to use in your pipeline. If you want to train your own model or create your custom task, `spacy-llm` also helps to implement any custom pipeline.\n",
+    "[spacy-llm](https://spacy.io/usage/large-language-models) is a package that integrates the strength of LLMs into regular spaCy pipelines, thus allowing quick and practical prompting for various tasks. Besides, since it requires no training data, the models are ready to use in your pipeline. If you want to train your own model or create your custom task, `spacy-llm` also helps to implement any custom pipeline.\n",
     "\n",
     "It is quite easy to use this powerful package with Argilla Feedback datasets. We can make inferences with the pipeline we will create and add them to our `FeedbackDataset`."
    ]
@@ -37,7 +37,7 @@
     "For details about configuring your deployment, check the [official Hugging Face Hub guide](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla).\n",
     "\n",
     "\n",
-    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.ipynb). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
+    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.md). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
     "\n",
     "For more information on deployment options, please check the Deployment section of the documentation.\n",
     "\n",
@@ -185,7 +185,7 @@
    "source": [
     "With these settings, we create an LLM pipeline for text classification and summarization in English with GPT3.5.\n",
     "\n",
-    "`spacy-llm` offers various models to implement in your pipeline. You can have a look at the available [OpenAI models](https://spacy.io/api/large-language-models#models-rest) as well as checking the [HuggingFace models](https://spacy.io/api/large-language-models#models-hf) offered if you want to work with open-source models.\n",
+    "`spacy-llm` offers various models to implement in your pipeline. You can have a look at the available [OpenAI models](https://spacy.io/api/large-language-models#models-rest) as well as check the [HuggingFace models](https://spacy.io/api/large-language-models#models-hf) offered if you want to work with open-source models.\n",
     "\n",
     "Now, with `ConfigParser`, we can create the config file."
    ]
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we have implemented a spacy-llm pipeline for text classification and summarization task. By Argilla Feedback datasets, we have been able to add the model predictions as suggestions to our dataset so that our annotators can utilize them. For more info on spacy-llm, you can go to their LLM [page](https://spacy.io/usage/large-language-models), and for other uses of Argilla Feedback datasets, you can refer to our [guides](https://docs.argilla.io/en/latest/guides/llms/practical_guides/practical_guides.html)."
+    "In this tutorial, we have implemented a spacy-llm pipeline for text classification and summarization tasks. By Argilla Feedback datasets, we have been able to add the model predictions as suggestions to our dataset so that our annotators can utilize them. For more info on spacy-llm, you can go to their LLM [page](https://spacy.io/usage/large-language-models), and for other uses of Argilla Feedback datasets, you can refer to our [guides](../../practical_guides/practical_guides.md)."
    ]
   }
  ],
