--- a/docs/_source/tutorials/notebooks/labelling-text2text-disaggregators-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-text2text-disaggregators-explainability.ipynb
@@ -72,7 +72,7 @@
     "## Setup\n",
     "\n",
     "\n",
-    "To complete this tutorial, you will need to install the Argilla client and a few third party libraries using `pip`. You also need to download a pretrained model from spaCy:"
+    "To complete this tutorial, you will need to install the Argilla client and a few third-party libraries using `pip`. You also need to download a pretrained model from spaCy:"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "source": [
     "## 📰 Load news summary data\n",
     "\n",
-    "For this analysis, we will be using [our news summary dataset](https://huggingface.co/datasets/argilla/news-summary) from the HuggingFace hub. This datasets is focused on a text2text summarization task, which requires news texts to be summarized into a single sentence or title. Due to the [nice integration with the HuggingFace hub](../../guides/features/datasets.html), we can easily do this within several lines of code. "
+    "For this analysis, we will be using [our news summary dataset](https://huggingface.co/datasets/argilla/news-summary) from the HuggingFace hub. This dataset is focused on a text2text summarization task, which requires news texts to be summarized into a single sentence or title. Due to the [nice integration with the HuggingFace hub](../../getting_started/quickstart_workflow.ipynb), we can easily do this within several lines of code. "
    ]
   },
   {
@@ -178,7 +178,7 @@
    "source": [
     "## 🗺️ Apply disaggregator features\n",
     "\n",
-    "After having uploaded the data, we can now take a closer look at the potential disaggregators that the `disaggregators` package provides. It focuses on 5 main classes, with several sub-classes that can be assigned to the text, based on word-matches. This means, each text can also be assigned to multiple classes.\n",
+    "After having uploaded the data, we can now take a closer look at the potential disaggregators that the `disaggregators` package provides. It focuses on 5 main classes, with several sub-classes that can be assigned to the text, based on word matches. This means that each text can also be assigned to multiple classes.\n",
     "\n",
     "- \"age\": [\"child\", \"youth\", \"adult\", \"senior\"]\n",
     "- \"gender\": [\"male\", \"female\"]\n",
@@ -347,13 +347,13 @@
     "\n",
     "### Inspect record info\n",
     "\n",
-    "Even though inspecting the record info is a bit slower, we can potentially assume that it might provide context to record for annotators that might suspect bias within the data. This will allow them to take this into account during annotation.\n",
+    "Even though inspecting the record info is a bit slower, we can potentially assume that it might provide context to record for annotators who might suspect bias within the data. This will allow them to take this into account during annotation.\n",
     "\n",
     "<img src=\"../../_static/tutorials/labelling-text2text-disaggregators-explainability/labelling-text2text-disaggregators-explainability_ui_record.png\" alt=\"Transformers Log Demo\" style=\"width: 1100px;\">\n",
     "\n",
     "### Alternatives\n",
     "\n",
-    "Besides the analyses mentioned above, there likely are way more interesting things you can do using this package. A good example being [this HuggingFace space](https://huggingface.co/spaces/society-ethics/disaggregators). So, be creative and avoid bias while doing so 😉\n"
+    "Besides the analyses mentioned above, there likely are way more interesting things you can do using this package. A good example is [this HuggingFace space](https://huggingface.co/spaces/society-ethics/disaggregators). So, be creative and avoid bias while doing so 😉\n"
    ]
   },
   {
@@ -364,7 +364,7 @@
     "## Summary\n",
     "\n",
     "In this tutorial, we learned about the `disaggregators` package, and how we can integrate this within Argilla.\n",
-    "This can help data-scientist, ML-engineers and annotators to manage and mitigate bias in their datasets."
+    "This can help data-scientists, ML-engineers and annotators to manage and mitigate bias in their datasets."
    ]
   }
  ],
