--- a/docs/_source/tutorials/notebooks/labelling-textclassification-gpt3-fewshot.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-gpt3-fewshot.ipynb
@@ -10,11 +10,11 @@
     "\n",
     "In this tutorial, we'll **build and evaluate a sentiment classifier for customer requests in the financial domain** using GPT-3 and Argilla. \n",
     "\n",
-    "GPT-3 is a powerful [model and API](https://openai.com/api/) from OpenAI which performs a variety of natural language tasks. [Argilla](https://www.argilla.io/) empowers you to quickly build and iterate on data for NLP.\n",
+    "GPT-3 is a powerful [model and API](https://openai.com/api/) from OpenAI that performs a variety of natural language tasks. [Argilla](https://www.argilla.io/) empowers you to quickly build and iterate on data for NLP.\n",
     "\n",
     "In this tutorial, you'll learn to:\n",
     "\n",
-    "- Setup and use a zero-shot sentiment classifier, which not only analyses the sentiment but also includes an explanation of its predictions!\n",
+    "- Set up and use a zero-shot sentiment classifier, which not only analyses the sentiment but also includes an explanation of its predictions!\n",
     "- Use Argilla to evaluate the quality of predictions and review an existing training set.\n",
     "\n",
     "This tutorial highlights the potential of building human-in-the-loop workflows involving large language models like GPT-3. \n",
@@ -155,7 +155,7 @@
    "source": [
     "## 0. The dataset: `banking77` sentiment dataset\n",
     "\n",
-    "For this tutorial, we'll use a small dataset which contains labels created with Argilla as part of [other tutorials](training-textclassification-transformers-pretrained.ipynb).\n",
+    "For this tutorial, we'll use a small dataset that contains labels created with Argilla as part of [other tutorials](training-textclassification-transformers-pretrained.ipynb).\n",
     "\n",
     "This dataset is based on the [banking77](https://huggingface.co/datasets/banking77) dataset, which contains online banking user queries annotated with their corresponding intents. \n",
     "\n",
@@ -331,7 +331,7 @@
     "\n",
     "We'll be using the [Completion API](https://beta.openai.com/docs/api-reference/completions/create), you can check the reference documentation to understand the different function parameters.\n",
     "\n",
-    "For finding the prompt template, we've played with different variations using the OpenAI playground UI, as shown below:\n",
+    "To find the prompt template, we've played with different variations using the OpenAI playground UI, as shown below:\n",
     "\n",
     "![Screenshot of Argilla UI](../../_static/tutorials/labelling-textclassification-gpt3-fewshot/labelling-textclassification-gpt3-fewshot-2.png)\n",
     "\n",
@@ -345,7 +345,7 @@
     "\n",
     "As we want to test zero-shot capabilities we won't provide any examples. In further tutorials, we'll extend this with N-shot by providing examples in the prompt itself, and also show how you can fine-tune GPT-3 with labelled examples. If you are interested join our [amazing community](https://join.slack.com/t/rubrixworkspace/shared_invite/zt-whigkyjn-a3IUJLD7gDbTZ0rKlvcJ5g) and let's discuss!\n",
     "\n",
-    "Below we define the prompt template, to which we will append the text to classifiy before calling the `openai.Completion.create` function."
+    "Below we define the prompt template, to which we will append the text to classify before calling the `openai.Completion.create` function."
    ]
   },
   {
@@ -377,7 +377,7 @@
     "\n",
     "Note\n",
     "\n",
-    "If you want to skip the prediction calls to OpenAI, you can load the records with the predictions and labels from the Hugging Face Hub running the code below and going directly to step 2:\n",
+    "If you want to skip the prediction calls to OpenAI, you can load the records with the predictions and labels from the Hugging Face Hub by running the code below and going directly to step 2:\n",
     "    \n",
     "```python\n",
     "\n",
@@ -3073,7 +3073,7 @@
    "source": [
     "Using ES query string DSL, we can compute performance metrics by interesting regions in the dataset. For example, we can see that performance for longer text (> 175) and neutral examples is much lower than for shorter text (<175). \n",
     "\n",
-    "Note this a really small dataset, but with a larger dataset we could analyse if our model struggles with longer text, or if longer texts tend to be negative, for example."
+    "Note that this is a really small dataset, but with a larger dataset we could analyze if our model struggles with longer text, or if longer texts tend to be negative, for example."
    ]
   },
   {
@@ -5179,7 +5179,7 @@
     "\n",
     "![Screenshot of Argilla UI](../../_static/tutorials/labelling-textclassification-gpt3-fewshot/labelling-textclassification-gpt3-fewshot-1.png)\n",
     "\n",
-    "This filter we'll show you the examples where the ground-truth disagrees with GPT-3. It will also show you the explanation behind GPT-3's prediction. Looking at some examples, as the one shown below, we find that some labels in the ground-truth could be wrong or at least ambiguous. For other examples, GPT-3 could be better instructed with examples or by refining the prompt.\n",
+    "This filter we'll show you exemplifies where the ground-truth disagrees with GPT-3. It will also show you the explanation behind GPT-3's prediction. Looking at some examples, such as the one shown below, we find that some labels in the ground-truth could be wrong or at least ambiguous. For other examples, GPT-3 could be better instructed with examples or by refining the prompt.\n",
     "\n",
     "![Screenshot of Argilla UI](../../_static/tutorials/labelling-textclassification-gpt3-fewshot/labelling-textclassification-gpt3-fewshot-3.png)\n",
     "\n",
